# opti-pv-public

./: .gitignore  full_image_inf.py  pyproject.toml
config/: data_config.yaml  inference_config.yaml
