[tool.poetry]
name = "opti-pv"
version = "0.1.0"
description = "Two-stage YOLOv5 inference pipeline for photovoltaic panel defect detection from drone imagery"
authors = ["Irene de Teresa <irene.de.t@gmail.com>"]
readme = "README.md"
license = "MIT"
python = ">=3.8,<3.12"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
# PyTorch: install the CUDA variant manually if needed:
# pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118
torch = ">=1.8.0"
torchvision = ">=0.9.0"
numpy = ">=1.21.0"
opencv-python = ">=4.5.0"
Pillow = ">=8.0.0"
PyYAML = ">=5.4.0"
supervisely = ">=6.0.0"

[tool.poetry.extras]
onnx = ["onnxruntime"]
tensorflow = ["tensorflow"]

[tool.poetry.group.dev.dependencies]
onnxruntime = {version = ">=1.8.0", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"

[tool.poetry.scripts]
opti-pv = "full_image_inf:main"
